# home-automation-hub

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: build_and_push.yml  ci.yml
apps/cost_splitter/: admin.py  api.py  apps.py  forms.py  models.py  serializers.py  types.py  urls.py  utils.py  views.py
apps/cost_splitter/migrations/: 0001_add_cost_and_report.py  0001_add_cost_and_split_report.py  0001_initial.py  0002_remove_cost_excluded_amount_alter_cost_description_and_more.py  0003_transaction.py  0004_transaction_uuid_and_more.py
apps/cost_splitter/static/css/: style.css
apps/cost_splitter/static/scripts/: top.js
apps/cost_splitter/templates/: add_cost_form.html  add_cost_split_form.html  add_report_form.html  base.html  costs_list.html  home.html  report_id.html  report_list.html
apps/cost_splitter/tests/: test_models.py  test_utils.py
config/: asgi.py  settings.py  urls.py  views.py  wsgi.py
config/templates/: base.html  config_base.html  main.html
