[project]
name = "home-automation-hub"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Robert Nyström", email = "robert.nystrom@toolsense.io" }]
dependencies = [
    "django>=5.0.3",
    "python-dotenv>=1.0.1",
    "django-rest-framework>=0.1.0",
    "django-cors-headers>=4.3.1",
    "djangorestframework-stubs>=3.14.5",
    "psycopg[binary]>=3.1.18",
    "uvicorn>=0.29.0",
]
readme = "README.md"
requires-python = ">= 3.12.2"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "mypy>=1.9.0",
    "django-stubs>=4.2.7",
    "pytest>=8.1.1",
    "pytest-django>=4.8.0",
    "coverage>=7.4.4",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[tool.coverage.run]
branch = true
source = ["apps"]
data_file = "coverage/.coverage"
relative_files = true

omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "test_performance_of_the_post_processing",
]

[tool.coverage.html]
directory = "coverage/html"

[tool.coverage.xml]
output = "coverage/coverage.xml"
