[project]
name = "home-automation-hub"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Robert Nyström", email = "robert.nystrom@toolsense.io" }]
dependencies = [
    "django>=5.2.1",
    "python-dotenv>=1.0.1",
    "django-rest-framework>=0.1.0",
    "django-cors-headers>=4.3.1",
    "djangorestframework-stubs>=3.14.5",
    "psycopg[binary]>=3.1.18",
    "uvicorn>=0.29.0",
]
readme = "README.md"
requires-python = ">= 3.13.1"

[dependency-groups]
dev = [
    "coverage>=7.6.10",
    "django-stubs>=5.1.2",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "ruff>=0.9.2",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[tool.coverage.run]
branch = true
source = ["apps"]
data_file = "coverage/.coverage"
relative_files = true

omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "test_performance_of_the_post_processing",
]

[tool.coverage.html]
directory = "coverage/html"

[tool.coverage.xml]
output = "coverage/coverage.xml"

[tool.setuptools]
packages = ["apps", "config"]
